--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h1 class="effective-solutions-title">Эффективные решения <br> для вашего бизнеса</h1>
       <button type="button" class="btn">Заказать услугу</button>
     </section>
-    <section class="our-peculiarities">
+    <section class="section our-peculiarities">
       <div class="container">
         <h2 class="our-peculiarities-title visually-hidden">особености и преимущества</h2>
         <ul class="our-peculiarities-item">
@@ -73,7 +73,7 @@
         </ul>
       </div>
     </section>
-    <section class="our-works">
+    <section class="section our-works">
       <div class="container">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="our-works-example">
@@ -89,7 +89,7 @@
         </ul>
       </div>
     </section>
-    <section class="our-team">
+    <section class="section our-team">
       <div class="container">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-memders">
