makes changes classes
header  and  team-memders-item

--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
     </div>
   </header>
   <main>
-    <section class="effective-solutions">
-      <h1 class="effective-solutions-title">Эффективные решения <br> для вашего бизнеса</h1>
-      <button type="button" class="btn">Заказать услугу</button>
+    <section class="section effective-solutions">
+      <div class="container">
+        <h1 class="effective-solutions-title">Эффективные решения <br> для вашего бизнеса</h1>
+        <button type="button" class="btn">Заказать услугу</button>
+      </div>
     </section>
     <section class="section our-peculiarities">
       <div class="container">
@@ -95,23 +97,31 @@
         <ul class="team-memders">
           <li class="team-memders-item">
             <img src="./images/team_member_1.jpg" alt="photo_of_member_1" width="270" class="member-photo"/>
-            <h3 class="team-member-name">Игорь Демьяненко</h3>
-            <p class="team-member-profession">Product Designer</p>
+            <div class="team-members-item-footer">
+              <h3 class="team-member-name">Игорь Демьяненко</h3>
+              <p class="team-member-profession">Product Designer</p>
+            </div>
           </li>
           <li class="team-memders-item">
             <img src="./images/team_member_2.jpg" alt="photo_of_member_2" width="270" class="member-photo"/>
-            <h3 class="team-member-name">Ольга Репина</h3>
-            <p class="team-member-profession">Frontend Developer</p>
+            <div class="team-members-item-footer">
+              <h3 class="team-member-name">Ольга Репина</h3>
+              <p class="team-member-profession">Frontend Developer</p>
+            </div>
           </li>
           <li class="team-memders-item">
             <img src="./images/team_member_3.jpg" alt="photo_of_member_3" width="270" class="member-photo"/>
-            <h3 class="team-member-name">Николай Тарасов</h3>
-            <p class="team-member-profession">Marketing</p>
+            <div class="team-members-item-footer">
+              <h3 class="team-member-name">Николай Тарасов</h3>
+              <p class="team-member-profession">Marketing</p>
+            </div>
           </li>
           <li class="team-memders-item">
             <img src="./images/team_member_4.jpg" alt="photo_of_member_4" width="270" class="member-photo"/>
-            <h3 class="team-member-name">Михаил Ермаков</h3>
-            <p class="team-member-profession">UI Designer</p>
+            <div class="team-members-item-footer">
+              <h3 class="team-member-name">Михаил Ермаков</h3>
+              <p class="team-member-profession">UI Designer</p>
+            </div>
           </li>
         </ul>
       </div>
