change width for h1

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main>
     <section class="section effective-solutions">
       <div class="container">
-        <h1 class="effective-solutions-title">Эффективные решения <br> для вашего бизнеса</h1>
+        <h1 class="effective-solutions-title">Эффективные решения для вашего бизнеса</h1>
         <button type="button" class="btn">Заказать услугу</button>
       </div>
     </section>
